datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}


model Employee {
  id                Int                 @id @default(autoincrement())
  firstName         String
  lastName          String
  email             String              @unique
  password          String
  isAdmin           Boolean
  departments       Department[]        @relation("EmployeeToDepartment")
  departmentHeads   DepartmentHead[]    // this field represents departments the employee is heading
  attendanceRecords AttendanceRecord[]
  exceptions        Exception[]
}

model Department {
  id                Int                  @id @default(autoincrement())
  name              String               @unique
  employees         Employee[]           @relation("EmployeeToDepartment")
  departmentHeads   DepartmentHead[]     // this field represents the head(s) of the department
}

model DepartmentHead {
  id               Int                  @id @default(autoincrement())
  employee         Employee             @relation(fields: [employeeId], references: [id])
  employeeId       Int
  department       Department           @relation(fields: [departmentId], references: [id])
  departmentId     Int
}

model AttendanceRecord {
  id              Int                   @id @default(autoincrement())
  date            DateTime
  punchType       String
  timestamp       DateTime
  employee        Employee              @relation(fields: [employeeId], references: [id])
  employeeId      Int
}

model Exception {
  id              Int                  @id @default(autoincrement())
  date            DateTime
  note            String
  employee        Employee             @relation(fields: [employeeId], references: [id])
  employeeId      Int
}
